--- a/public/calendar.html
+++ b/public/calendar.html
@@ -139,26 +139,23 @@
         function maybeEnableCalendarFeatures() {
             console.log("maybeEnableCalendarFeatures called. gapiInited:", gapiInited, "gisInited:", gisInited, "currentUser:", currentUser ? true : false);
             if (gapiInited && gisInited && currentUser) {
-                // URLに認証コードが含まれているかチェック
                 const urlParams = new URLSearchParams(window.location.search);
                 const code = urlParams.get('code');
                 const error = urlParams.get('error');
 
                 if (code) {
-                    // 認証コードがある場合、サーバーサイドでトークン交換
+                    // Case 1: 新しい認証コードがGoogleリダイレクトから受信された場合
                     showStatus("Google認証を完了しています...", false, 'gcal-auth-status');
                     handleAuthCodeExchange(code);
-                    // URLからコードを削除してクリーンアップ (履歴を汚さないため)
                     window.history.replaceState({}, document.title, window.location.pathname);
                 } else if (error) {
-                    // 認証エラーがある場合
+                    // Case 2: Google認証エラーがリダイレクト中に発生した場合
                     showStatus(`Google認証エラー: ${error}`, true, 'gcal-auth-status');
                     console.error("Google authentication error:", error);
-                    updateSignInStatus(false); // 未連携状態に更新
+                    updateSignInStatus(false);
                 } else {
-                    // 通常のページロード時、または認証コードなし
-                    // 既存のアクセストークンがあるか確認し、UIを更新
-                    updateSignInStatus(gapi.client.getToken() !== null);
+                    // Case 3: 通常のページロード時、保存されたリフレッシュトークンを使用してトークンを更新しようと試みる
+                    attemptTokenRefresh(); // 新しい関数で更新を処理
                 }
                 
                 document.getElementById('loading').style.display = 'none';
@@ -230,6 +227,52 @@
                 updateSignInStatus(false);
             }
         }
+
+        /**
+         * 保存されたリフレッシュトークンを使用してGoogleアクセストークンを更新しようと試みる
+         */
+        async function attemptTokenRefresh() {
+            showStatus("既存のGoogle連携を確認中...", false, 'gcal-auth-status');
+            try {
+                const firebaseIdToken = await auth.currentUser.getIdToken();
+                if (!firebaseIdToken) {
+                    throw new Error("Firebase認証トークンが取得できません。");
+                }
+
+                const response = await fetch(REFRESH_TOKEN_FUNCTION_URL, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${firebaseIdToken}`
+                    }
+                });
+
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    // 404 (Not Found) はリフレッシュトークンがないことを意味する可能性が高い
+                    if (response.status === 404 || response.status === 401) {
+                        console.warn("Refresh token not found or invalid. User needs to re-authorize.");
+                        showStatus("Google連携の自動更新に失敗しました。再度連携してください。", true, 'gcal-auth-status');
+                        updateSignInStatus(false);
+                        return;
+                    }
+                    throw new Error(`HTTP error! status: ${response.status}, message: ${errorText}`);
+                }
+
+                const data = await response.json();
+                if (data.accessToken) {
+                    gapi.client.setToken({ access_token: data.accessToken });
+                    updateSignInStatus(true); // 認証成功
+                } else {
+                    throw new Error("Failed to get access token from refresh.");
+                }
+            } catch (error) {
+                console.error("Error refreshing token:", error);
+                showStatus(`Google連携の自動更新に失敗しました: ${error.message} 再度連携してください。`, true, 'gcal-auth-status');
+                updateSignInStatus(false); // 認証ボタンを表示
+            }
+        }
+
 
         /**
          * Firebase認証完了後に呼び出されるメインのセットアップ関数
