--- a/public/summary.html
+++ b/public/summary.html
@@ -38,7 +38,8 @@
                 </div>
 
                 <!-- グラフ表示エリア -->
-                <div id="chart-container" class="hidden bg-gray-50 p-4 rounded-lg shadow-inner mb-6">
+                <!-- h-80 クラスを追加して高さを固定 -->
+                <div id="chart-container" class="hidden bg-gray-50 p-4 rounded-lg shadow-inner mb-6 h-80">
                     <h3 class="text-xl font-bold text-gray-800 mb-4">月次プロジェクト別稼働推移</h3>
                     <canvas id="time-chart"></canvas>
                 </div>
